styles.css
/* ... */
input[type="range"]::-moz-range-track {  
    margin-top: -1px;
}

input[type="range"]::-moz-range-progress {
    background-color: var(--primary-600); 
    height: 4em;
    width: 0;
    border: none;
    box-shadow: -20em 0 0.75em 19em var(--primary-600);
    box-sizing: border-box;
}

input[type="range"]::-moz-range-thumb {
    border: 0.2em solid #123;
    border-radius: 2em;
    height: 1.6em;
    width: 1.6em;
}

input[type="file"] {
    overflow: hidden;
    max-width: 220px;
}

.range-display {
    text-align: center;
}

.tint-color-selector {
    display: none;
}

.tint-color-selector.active {
    display: block;
}

/* color change things */
#color-code-reminder {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0.5em;
}

#formatting-codes-reminder {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.5em;
}

.stat-reminder {
    background-color: var(--background);
}

.stat-category {
    padding: 0.5em;
    color: var(--color);
    background-color: #ddd;
    border: 0.25em solid #ddd;
    border-radius: 0.5em;
}

.stat-category-label {
    font-size: 1.5em;
    cursor: pointer;
}

.stat-category-container {
    display: none;
    grid-template-columns: 1fr;
    gap: 0.5em;
    margin-top: 1em;
}

.stat-category.active .stat-category-container {
    display: grid;
}

#stat-code-reminder, #template-code-reminder {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.5em;
}

#nbt-textarea {
    width: calc(100% - 2em);
    min-height: 30em;
}

#minecraft-command-output, #exporter-info {
    width: calc(100% - 2em);
    min-height: 20em;
}

.tip::before {
    content: "USEFUL TIP: ";
    font-weight: 800;
}

@media (max-width: 480px) {
    #menu-toggle {
        display: flex;
    }

    #icon-wrapper-collapsable {
        overflow-y: scroll;
        overflow-x: visible;
        max-height: 0;
        transition: all ease-in-out 0.45s;
    }

    #icon-wrapper-collapsable.active {
        max-height: 90dvh;
    }

    #generator-textarea {
        transition: width 0.25s ease-in-out;
        width: calc(100% - 2em);
    }

    #generator-textarea.minimized-textarea {
        width: calc(100% - 8.5em);
        margin: 1em;
    }
}

.click-toggleable {
    text-decoration: underline;
    cursor: pointer;
    margin-bottom: 0.25em;
}

.note {
    font-style: italic;
    color: #777;
    font-size: 0.9em;
}

#toast-container {
    position: absolute;
    top: 1em;
    right: 0;
    width: 20em;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    gap: 1em;
}

@keyframes toast-enter {
    0% {
        transform: translateX(100%);
        opacity: 0;
    }
    80% {
        transform: translate(20%);
        opacity: 0;
    }
    100% {
        transform: translateX(0%);
        opacity: 1;
    }
}

@keyframes toast-progress {
    0% {
        width: 0%;
    }
    100% {
        width: 100%;
    }
}

.toast {
    --_background: var(--background);
    --_border: var(--purple-border);
    --_toast-color: var(--toast-color, white);
    --_animation-duration: var(--animation-duration, 20s);
    position: relative;
    background-color: var(--_background);
    padding: 1em 1.2em;
    border: 0.5em solid var(--_border);
    width: 19em;
    color: white;
    margin: 0.5em;
    left: 1em;
    animation: 0.75s toast-enter 1 ease-in-out, 0.75s var(--_animation-duration) reverse toast-enter 1 ease-in-out forwards;
}

.toast img {
    height: 1.25em;
    margin-bottom: 0.5em;
}

.toast-content {
    display: flex;
    flex-direction: column;
}

.toast-subtext {
    color: #777;
    margin-top: 0.25em;
}

.toast-hoverable {
    display: none;
    color: #a0a0a0;
    margin-top: 0.5em;
    font-weight: 700;
}

.toast:hover .toast-hoverable {
    display: block;
}

.toast:hover .toast-hoverable.disabled {
    display: none;
}

#toast-template {
    display: none;
}

.toast-border {
    position: absolute;
    top: -1em;
    bottom: -1em;
    left: -1em;
    right: -1em;
    z-index: -1;
}

.toast-border-inline, .toast-border-top, .toast-border-bottom {
    content: '';
    position: absolute;
    background-color: var(--_background);
    z-index: -1;
}

.toast-border-inline {
    top: 0.5em;
    bottom: 0.5em;
    width: 0.5em;
}

.toast-border-top, .toast-border-bottom {
    right: 0.5em;
    left: 0.5em;
    height: 0.5em;
}

.toast-border-bottom {
    bottom: 0;
}

.toast-progress {
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: var(--_toast-color);
    animation: var(--_animation-duration, 20s) toast-progress infinite linear;
    height: 0.5em;
    width: 0;
    opacity: var(--_opacity, 1);
    transition: opacity 0.2s ease-in-out;
}

.toast:hover {
    animation-play-state: running, paused;
}

.toast:hover * {
    --_opacity: 0.25;
    animation-play-state: paused;
    cursor: pointer;
}

#footer-main {
    flex-grow: 10;
}

#calling-card {
    text-align: right;
}

